--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 
 <body>
 
-  
+  <header class="main-header">
+    <h1>Fun Bus</h1>
+    <nav>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
      
   <div class="container home">
    
